Makefile: Add util.c

--- a/wrapper/Makefile
+++ b/wrapper/Makefile
@@ -3,12 +3,15 @@ SRCS:=wrapper.c
 SRCS+=engine.c
 SRCS+=rpc.c
 SRCS+=buf.c
+SRCS+=util.c
 SRCS+=logger.c
 OBJS:=$(SRCS:.c=.o)
 
 CC:=cc
 CPPFLAGS:=-Wall
 CPPFLAGS+=-W
+CPPFLAGS+=-Wno-unused-parameter
+CPPFLAGS+=-Wno-pointer-sign
 CPPFLAGS+=-I../include
 CPPFLAGS+=-DXP_UNIX=1
 CPPFLAGS+=-fPIC
