--- a/wrapper/Makefile
+++ b/wrapper/Makefile
@@ -1,6 +1,7 @@
 LIB:=libwrapper.so
 SRCS:=wrapper.c
 SRCS+=engine.c
+SRCS+=npobject.c
 SRCS+=../common/rpc.c
 SRCS+=../common/buf.c
 SRCS+=../common/util.c
@@ -12,9 +13,11 @@ CPPFLAGS:=-Wall
 CPPFLAGS+=-W
 CPPFLAGS+=-Wno-unused-parameter
 CPPFLAGS+=-Wno-pointer-sign
+CPPFLAGS+=-I/usr/local/include
 CPPFLAGS+=-I../include
 CPPFLAGS+=-I../common
 CPPFLAGS+=-DXP_UNIX=1
+CPPFLAGS+=-DMOZ_X11=1
 CPPFLAGS+=-fPIC
 CPPFLAGS+=-pipe
 
@@ -22,6 +25,9 @@ all: $(LIB)
 
 clean:
 	rm -f $(OBJS) $(LIB) *~
+
+install:
+	cp $(LIB) /home/paleman/.mozilla/plugins/npwrapper.libflashplayer.so
 
 $(LIB): $(OBJS)
 	$(CC) -shared -o $@ $^ $(LDADD)
